--- a/package.json
+++ b/package.json
@@ -36,10 +36,10 @@
     "crypto": "^1.0.1",
     "date-fns": "^2.27.0",
     "escape-html": "^1.0.3",
-    "express": "4.20.0",
+    "express": "^4.21.2",
     "figlet": "^1.5.2",
-    "fp-ts": "^2.16.0",
-    "io-ts": "^2.2.20",
+    "fp-ts": "^2.16.9",
+    "io-ts": "^2.2.22",
     "jose": "^4.15.5",
     "jsontokens": "^4.0.1",
     "lodash": "^4.17.21",
@@ -86,7 +86,7 @@
     "supertest": "^6.2.1",
     "ts-jest": "^27.1.3",
     "ts-node": "^10.4.0",
-    "typescript": "^5.4.5"
+    "typescript": "^5.7.3"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
