Add Alessandro-Laregina to codeowners

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,3 +1,3 @@
 # see https://help.github.com/en/articles/about-code-owners#example-of-a-codeowners-file
 
-* @pagopa/io-app @ChrisMattew @gispada @freddi301
+* @pagopa/io-app @ChrisMattew @gispada @freddi301 @Alessandro-Laregina
