--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "jsontokens": "^4.0.1",
     "lodash": "^4.17.21",
     "morgan": "^1.10.1",
+    "node-forge": "^1.3.1",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "sha256": "^0.2.0",
@@ -57,7 +58,8 @@
     "xml2js": "^0.5.0"
   },
   "resolutions": {
-    "zlib": "^1.0.5"
+    "zlib": "^1.0.5",
+    "@types/node-forge@^1.3.14": "patch:@types/node-forge@npm%3A1.3.14#./.yarn/patches/@types-node-forge-npm-1.3.14-f9a6a859dc.patch"
   },
   "devDependencies": {
     "@faker-js/faker": "^9.9.0",
@@ -72,6 +74,7 @@
     "@types/lodash": "^4.14.178",
     "@types/morgan": "^1.9.10",
     "@types/node": "^22.15.32",
+    "@types/node-forge": "^1.3.14",
     "@types/sha256": "^0.2.0",
     "@types/supertest": "^2.0.8",
     "@types/uuid": "^9.0.8",
